--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <!-- ~* Thank you! *~ -->
 <html lang="en">
 <head>
+    <!-- Super standard boilerplate stuff, nothing fancy here !-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
