Playing around with copy and adding in headshot.

--- a/index.html
+++ b/index.html
@@ -31,16 +31,17 @@
             <div class="flex-element">
                 <header>
                     <h2>Greetings Again!</h3>
-                    <h4>Glad to see you make it.</h4>
+                    <h4>Glad to see you could make it.</h4>
                 </header>
     
                 <p>My name is Kristoff Arneson, the creator of this little corner of the internet you've found yourself in.</p>
                 <p>I'm a developer with a Bachelors Degree in Computer Science from Michigan Technological University and I do all sorts of things! From photography, to web design and development, to technical communication, to brewing and cooking, and to biking, I love to engage in a wide variety of fulfilling activities and work.</p>
+                <p>Below, I'll outline a bit of my professional work through my GitHub portfolio, my resume, and some work examples. After that, I'll chat a bit about myself outside the office and include all my contact info.</p>
             </div>
 
             <div class="flex-element">
                 <div class="headshot">
-                    <img src="https://via.placeholder.com/150" alt="A beautiful headshot of myself">
+                    <img src="kristoff-frozen-headshot.jpg" alt="A beautiful headshot of myself">
                 </div>
             </div>
 
