Updated copy and added humans.txt

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     
                 <p>My name is Kristoff Arneson, the curator of this little corner of the internet you've found yourself in.</p>
                 <p>I'm a developer with a Bachelors Degree in Computer Science from Michigan Technological University and I do all sorts of things! From photography, to web design and development, to technical communication, to brewing and cooking, and to biking, I love to engage in a wide variety of fulfilling activities and work.</p>
-                <p>Below, I'll outline a bit of my professional work through my GitHub portfolio, my resume, and some work examples. After that, I'll chat a bit about myself outside the office and include all my contact info.</p>
+                <p>Below, you can see a bit of my professional work through my GitHub portfolio, my resume, and some project examples. After that, I'll chat a bit about myself outside the office and about who I am as a person!</p>
             </div>
 
             <div class="flex-element">
@@ -74,8 +74,8 @@
 
                 <h3>Intagible, human, personable work:</h3>
 
-                <p>Working in the technical field can introduce many challenging aspects to communication, leading to lost time, headaches, and even lost business. First hand experience with strained communication with clients, from clients, within teams, and across teams led me to focus on technical communication throughout my undergraduate and professional experience. Or, as I like to say, "Engineering speak for everyone else".</p>
-                <p>The art of disseminating information to the proper audience can be a nuanced one. You don't want to overestimate your audiences experience but even more so, you don't want to underestimate it (lest you desire coming across as ignorant).</p>
+                <p>Working in any technical field introduces many challenging aspects to communication that can lead to lost time, headaches, and even lost business. The art of disseminating information to the proper audience can be a nuanced one. You don't want to overestimate your audiences experience but even more so, you don't want to underestimate it. Striking balance between respecting your audience and understanding your own biases isn't always an easy one, but being conscious of it and working toward it provides a meaningful difference to all involved. First hand experience with this communication pattern through client work and across interdisciplinary teams led me to focus on technical communication throughout my undergraduate and professional experience.</p>
+                <p>This, combined with a desire to share knowledge led to a powerful, budding passion. Translating between the technical world and non-technical world can be tricky, but is deeply rewarding. Imagine explaining IPV6 to your grandmother, or how a CVT has "infinite" gear ratios. Most would like to say it's impossible, but I like to say it's "Engineering speak for the sane".</p>
 
             </div>
 
