--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
         <p>
             crafted by a 
-            <a href="/humans.txt">human being</a>
+            <a href="humans.txt">human being</a>
         </p>
 
         <div class="social-container">
