Updating place for resume

--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
                 <li>user satisfaction and usability: products are for everyone and all should leave feeling good about their experience</li>
             </ul>
 
-            <a href="docs/kristoff-arneson-resume.pdf"></a>
+            <div class="resume-container">
+                <a href="docs/kristoff-arneson-resume.pdf"></a>
+            </div>
 
             <div class="technical-skills">
 
@@ -74,8 +76,12 @@
 
                 <h3>Intagible, human, personable work:</h3>
 
-                <p>Working in any technical field introduces many challenging aspects to communication that can lead to lost time, headaches, and even lost business. The art of disseminating information to the proper audience can be a nuanced one. You don't want to overestimate your audiences experience but even more so, you don't want to underestimate it. Striking balance between respecting your audience and understanding your own biases isn't always an easy one, but being conscious of it and working toward it provides a meaningful difference to all involved. First hand experience with this communication pattern through client work and across interdisciplinary teams led me to focus on technical communication throughout my undergraduate and professional experience.</p>
-                <p>This, combined with a desire to share knowledge led to a powerful, budding passion. Translating between the technical world and non-technical world can be tricky, but is deeply rewarding. Imagine explaining IPV6 to your grandmother, or how a CVT has "infinite" gear ratios. Most would like to say it's impossible, but I like to say it's "Engineering speak for the sane".</p>
+                <p>Working in any technical field introduces many challenging aspects to communication that can lead to lost time, headaches, and even lost business. The art of disseminating information to the proper audience can be a nuanced one. 
+                You don't want to overestimate your audiences experience but even more so, you don't want to underestimate it. Striking balance between respecting your audience and understanding your own biases isn't always an easy one, but being 
+                conscious of it and working toward it provides a meaningful difference to all involved. First hand experience with this communication pattern through client work and across interdisciplinary teams led me to focus on technical communication throughout my undergraduate and professional experience.</p>
+                
+                <p>This, combined with a desire to share knowledge led to a powerful, budding passion. Translating between the technical world and non-technical world can be tricky, but is deeply rewarding. Imagine explaining IPV6 to your grandmother, or how a CVT has "infinite" gear ratios.
+                 Most would like to say it's impossible, but I like to say it's "Engineering speak for the sane".</p>
 
             </div>
 
