Added in resume button and appropriate styling

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
 
             <div class="flex-element">
-                <div class="headshot">
+                <div id="headshot">
                     <img src="img/kristoff-frozen-headshot.jpg" alt="A beautiful, frosted headshot of myself">
                 </div>
             </div>
@@ -62,9 +62,7 @@
                 <li>providing user satisfaction and usability: products are for everyone and all should leave feeling good about their experience</li>
             </ul>
 
-            <div id="resume-container">
-                <a href="docs/kristoff-arneson-resume.pdf"></a>
-            </div>
+            <a class="button" href="docs/kristoff-arneson-resume.pdf">View My Resume</a>
 
             <div id="technical-skills">
 
