Fixing/playing around with flexbox to get desired outcome. Breakpoints need tuning as well as flow.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <main id="main-container">
         
-        <section id="intro">
+        <section class="flex-container" id="intro">
 
             <div class="flex-element">
                 <header>
@@ -67,6 +67,12 @@
             <div id="technical-skills">
 
                 <h3>Tangible, NDA-free, open source work:</h3>
+
+                <!-- <div class="flex-container">            
+                    <div class="flex-element project-card hightlight">stuff</div>
+                    <div class="flex-element project-card">stuff 2</div>
+                    <div class="flex-element project-card">stuff 3</div>
+                </div> -->
 
             </div>
 
