Updated title for SEO and other purposes.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css?family=Chakra+Petch|Source+Sans+Pro" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
-    <title>arneson.io</title>
+    <title>Kristoff Arneson is a: Developer | Designer | Cook | All aroung cool person!</title>
 </head>
 <body>
     <header class="top-header">
