Ironed out the flex container issues. Cards for projects now exist! Just have to be flushed out in the mmorn.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css?family=Chakra+Petch|Source+Sans+Pro" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
-    <title>Kristoff Arneson is a: Developer | Designer | Photographer | Cook | Professional | All aroung cool person!</title>
+    <title>Kristoff Arneson is a: Developer | Designer | Photographer | Cook | Professional | All around cool person!</title>
 </head>
 <body>
     <header class="top-header">
@@ -28,7 +28,7 @@
         
         <section class="flex-container" id="intro">
 
-            <div class="flex-element">
+            <div class="flex-element intro-content">
                 <header>
                     <h2>Greetings Again!</h2>
                     <h4>Glad to see you could make it.</h4>
@@ -39,7 +39,7 @@
                 <p>Below, you can see a bit of my professional work through my GitHub portfolio, my resume, and some project examples. After that, I'll chat a bit about myself outside the office and about who I am as a person!</p>
             </div>
 
-            <div class="flex-element">
+            <div class="flex-element intro-content">
                 <div id="headshot">
                     <img src="img/kristoff-frozen-headshot.jpg" alt="A beautiful, frosted headshot of myself">
                 </div>
@@ -68,14 +68,14 @@
 
                 <h3>Tangible, NDA-free, open source work:</h3>
 
-                <!-- <div class="flex-container">            
+                <!-- <div class="flex-container card-container">            
                    
                     <div class="flex-element project-card hightlight">
                         <h4 class="card-title">Card Title</h4>
 
-                        <div class="card-links">
-                                <a class="button" href="">View Website</a>
-                                <a class="button" href="">View Source Code</a>
+                        <div class="flex-container card-links">
+                                <a class="flex-element button card-btn" href="">Website</a>
+                                <a class="flex-element button card-btn" href="">Source Code</a>
                         </div>
 
                         <p class="card-bump">
@@ -90,9 +90,9 @@
                     <div class="flex-element project-card hightlight">
                         <h4 class="card-title">Card Title</h4>
 
-                        <div class="card-links">
-                                <a class="button" href="">View Website</a>
-                                <a class="button" href="">View Source Code</a>
+                        <div class="flex-container card-links">
+                                <a class="flex-element button card-btn" href="">Website</a>
+                                <a class="flex-element button card-btn" href="">Source Code</a>
                         </div>
 
                         <p class="card-bump">
@@ -107,9 +107,9 @@
                     <div class="flex-element project-card hightlight">
                         <h4 class="card-title">Card Title</h4>
 
-                        <div class="card-links">
-                                <a class="button" href="">View Website</a>
-                                <a class="button" href="">View Source Code</a>
+                        <div class="flex-container card-links">
+                                <a class="flex-element button card-btn" href="">Website</a>
+                                <a class="flex-element button card-btn" href="">Source Code</a>
                         </div>
 
                         <p class="card-bump">
@@ -119,9 +119,9 @@
                         <h5 class="card-sub">Role:</h5>
                         <h5 class="card-sub">Desc:</h5>
 
-                    </div>
+                    </div> -->
 
-                </div> -->
+                </div>
 
             </div>
 
