--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- Oh wow you've made it here, you must be really curious! If you've opened this up to look at my source code, enjoy! -->
 <!-- For a look at the entire project, I have my GitHub repo linked in the footer, plus other goodies on my GitHub page. -->
 <!-- Thanks for peeking under the hood, it means a lot to me. If you did for a specific purpose, feel free to drop me an email: -->
-<!-- kristoff at arneson.io -->
+<!-- krisnat arneson.io -->
 <!-- ~* Thank you! *~ -->
 <html lang="en">
 <head>
@@ -15,13 +15,13 @@
     <link href="https://fonts.googleapis.com/css?family=Chakra+Petch|Source+Sans+Pro" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
-    <title>Kristoff Arneson is a: Developer | Designer | Photographer | Cook | Professional | All around cool person!</title>
+    <title>Kris Arneson is a: Developer | Designer | Organizer | Professional </title>
 </head>
 <body>
     <header class="top-header">
         <h1 class="welcome-message" id="greeting">Hello, welcome esteemed web traveler.</h1>
         <h3 class="welcome-message" id="sub-greeting">Please, make yourself at home.</h3>
-        <h5 class="welcome-message" id="signed-greeting">~ Kristoff</h5>
+        <h5 class="welcome-message" id="signed-greeting">~ Kris</h5>
     </header>
 
     <main id="main-container">
@@ -34,14 +34,14 @@
                     <h4>Glad to see you could make it.</h4>
                 </header>
     
-                <p>My name is Kristoff Arneson, the curator of this little corner of the internet you've found yourself in.</p>
-                <p>I'm a developer with a Bachelors Degree in Computer Science from Michigan Technological University and I do all sorts of things! From photography, to web design and development, to technical communication, to brewing and cooking, and to biking, I love to engage in a wide variety of fulfilling activities and work.</p>
+                <p>My name is Kris Arneson, the curator of this little corner of the internet you've found yourself in.</p>
+                <p>I'm a Software Developer with a Bachelors Degree in Computer Science from Michigan Technological University and passionate about quality. I wear all kinds of hats in many different roles both professionally and personally. From photography, to web design and development, technical communication, brewing and recipe developing, and to biking, I love to engage in a wide variety of fulfilling activities and work.</p>
                 <p>Below, you can see a bit of my professional work through my GitHub portfolio, my resume, and some project examples. After that, I'll chat a bit about myself outside the office and about who I am as a person!</p>
             </div>
 
             <div class="flex-element intro-content">
                 <div id="headshot">
-                    <img src="img/kristoff-frozen-headshot.jpg" alt="A beautiful, frosted headshot of myself">
+                    <img src="img/ka-headshot.jpg" alt="A headshot of Kris riding a gondola in the mountains">
                 </div>
             </div>
 
@@ -56,13 +56,14 @@
             <p>I enjoy crafting meaningful digital experiences by:</p>
             <ul>
                 <li>honing in on client desires: determining needs, requests, scope, and working timeline</li>
+                <li>being Agile and utilizing best development practices for a smooth experience
                 <li>creative collaboration: whether collaborating on design or collaborative development</li>
                 <li>creating flexible, dynamic, and impactful designs: something to leave a lasting memory and work on all devices</li>
                 <li>utilizing graceful implementation: using modern tools where appropriate or handrolling my own</li>
                 <li>providing user satisfaction and usability: products are for everyone and all should leave feeling good about their experience</li>
             </ul>
 
-            <a class="button" href="docs/kristoff-arneson-resume-2022.pdf">View My Resume</a>
+            <a id="resume" class="button" href="docs/kris-a-resume.pdf">View My Resume</a>
 
             <div id="technical-skills">
 
@@ -148,7 +149,7 @@
         <section id="about-me">
 
             <header>
-                <h2>More about Kristoff, the human</h2>
+                <h2>More about Kris, the human</h2>
             </header>
 
             <div id="outside-the-office">
